fix svg wave on mobile

--- a/style.scss
+++ b/style.scss
@@ -543,8 +543,8 @@ form .row {
     overflow: hidden;
     position: absolute;
     top: -0.1rem;
-    left:0;
-    right:0;
+    left: -0.2rem;
+    right:-0.2rem;
 
     svg {
         width: 103%;
